--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@
     --fontHeading: 'PT Sans', sans-serif;
     --fontParagraph: 'Open Sans', sans-serif;
     --primaryColor: #784D3C;
+    --gray: #e1e1e1;
     --white: #ffffff;
     --black: #000000;
 }
@@ -23,11 +24,14 @@ body{
     width: 90%;
     margin: 0 auto;
 }
+img{
+    max-width: 100%;
+}
 a{
     text-decoration: none;
 }
 h1,h2,h3,h4{
-    font-family: --var(--fontHeading);
+    font-family: var(--fontHeading);
 }
 h1{
     font-size: 4.8rem;
@@ -92,8 +96,43 @@ h4{
     }
 }
 .navegation__link{
-    display: block;
-    text-align: center;
-    font-size: 1.8rem;
     color: var(--white);
+    display: block;
+    font-size: 1.8rem;
+    text-align: center;
+}
+
+@media (min-width: 768px) {
+    .main-content{
+        column-gap: 4rem;
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+    }    
+}
+.input{
+    border-bottom: 1px solid var(--gray);
+    margin-bottom: 2rem;
+}
+.input:last-of-type{
+    border: one;
+    margin-bottom: 0;
+}
+.button{
+    display: block;
+    font-family: var(--fontHeading);
+    color: var(--white);
+    text-align: center;
+    padding: 1rem 3rem;
+    font-size: 1.8rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    margin-bottom: 2rem;
+}
+@media (min-width: 768px) {
+    .button{
+        display: inline-block;
+    }
+}
+.primary__button{
+    background-color: var(--black);
 }
