--- a/css/styles.css
+++ b/css/styles.css
@@ -20,8 +20,7 @@ body{
 }
 /* Global */
 .container{
-    max-width: 120rem;
-    width: 90%;
+    width: min(90%,120rem);
     margin: 0 auto;
 }
 img{
@@ -73,6 +72,9 @@ h4{
     .header__text{
         margin-top: 15rem;
     }
+}
+.bar{
+    padding-top: 2rem;
 }
 @media (min-width: 768px) {
     .bar{
@@ -161,4 +163,9 @@ h4{
 .widget-curse__label,
 .widget-curse__info{
     font-size: 2rem;
+}
+.footer{
+    background-color: var(--black);
+    padding-bottom: 3rem;
+    margin-top: 4rem;
 }
