the page about us is finished without problem

--- a/css/styles.css
+++ b/css/styles.css
@@ -52,7 +52,7 @@ h4{
 .no-padding{
     padding: 0;
 }
-.center-text{
+.text-center{
     text-align: center;
 }
 /* Header */
@@ -168,4 +168,18 @@ h4{
     background-color: var(--black);
     padding-bottom: 3rem;
     margin-top: 4rem;
+}
+/* PAGE ABOUT US */
+@media (min-width: 768px) {
+    .about-us{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        column-gap: 2rem;
+    }
+}
+.about-us__image{
+
+}
+.about-us__text{
+
 }
